Fixed featured products z-index which prevented button from being clicked

--- a/components/elements/buttons/see-product.module.scss
+++ b/components/elements/buttons/see-product.module.scss
@@ -9,6 +9,7 @@
   display: inline-block;
   width: fit-content;
   white-space: nowrap;
+  z-index: 1000;
 }
 .orange {
   background-color: $color-primary-orange;
