--- a/components/pages/home-page/featured-products.module.scss
+++ b/components/pages/home-page/featured-products.module.scss
@@ -11,7 +11,6 @@
     background-color: $color-primary-orange;
     height: 56rem;
     overflow: hidden;
-    z-index: -1;
     margin-bottom: 4.8rem;
 
     @include respond(tab-port) {
@@ -87,7 +86,6 @@
   width: 38rem;
   min-width: 30rem;
   transform: skewX(2deg);
-  z-index: -1;
 
   @include respond(tab-port) {
     position: initial;
